--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             </nav>
         </header>
 
+        <div class="tabs">
+            <div class="buttons">
+                <button>All Tests</button><button>Your Tests</button>
+            </div>
+        </div>
+
         <!-- SIDEBAR -->
         <div class="sidebar-container">
             <ul class="sidebar-list">
