make online button

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
             </ul>
         </div>
 
+        <div class="chat">
+            <button>
+                <span class="chat-text">Online</span>
+            </button>
+        </div>
+
         <main>
             <div class="main-search">
                 <input
